Phase3 finished, waiting for edits of previous phases
Pair Programming forever

--- a/checkmate/checkmateclient/templates/connect.html
+++ b/checkmate/checkmateclient/templates/connect.html
@@ -11,7 +11,7 @@
 <script>
     function func()
     {
-        document.body.innerHTML = '<h1 style="color:red;" >Wating for opponent!</h1>' + document.body.innerHTML
+        document.body.innerHTML = '<h1 style="color:red;" >Waiting for opponent!</h1>' + document.body.innerHTML
     }
 </script>
 
