--- a/checkmate/checkmateclient/templates/start.html
+++ b/checkmate/checkmateclient/templates/start.html
@@ -13,7 +13,7 @@
     {
         if( document.getElementsByName('mode')[0].value == 'multi' )
         {
-            document.body.innerHTML = '<h1 style="color:red;" >Wating for opponent!</h1>' + document.body.innerHTML
+            document.body.innerHTML = '<h1 style="color:red;" >Waiting for opponent!</h1>' + document.body.innerHTML
         }
     }
 </script>
