--- a/checkmate/checkmateclient/templates/play.html
+++ b/checkmate/checkmateclient/templates/play.html
@@ -7,38 +7,11 @@
 <link rel="stylesheet" href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.css">
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <script src="//code.jquery.com/ui/1.11.2/jquery-ui.js"></script>
-<link rel="stylesheet" href="/resources/demos/style.css">
-<link rel="stylesheet" href="../static/bootstrap.css">
 <style>
 #draggable { width: 150px; height: 150px; padding: 0.5em; }
 </style>
-<script>
-$(function() {
-	$( "#chessboard tr td img" ).draggable({containment : "#boardtable"  });
-	$('#chessboard tr td img').droppable( {
-//		activeClass: "ui-state-default",
-//		hoverClass: "ui-drop-hover",
-//		accept: ":not(.ui-sortable-helper)",
-//		over: function (event, ui) {
-//		var $this = $(this);
-//		},
-	    drop: handleDropEvent
-		  } );
-});
-
-function handleDropEvent( event, ui ) {
-  var draggable = ui.draggable.attr('name');
-  var droppable = $(this).attr("name");
-    alert( 'The square with ID "' + draggable+ '" was dropped onto me!'+ droppable );
-	event.preventDefault();
-	document.getElementsByName('moves')[0].value += draggable;
-	document.getElementsByName('moves')[0].value += droppable;
-	alert(draggable+droppable);
-	control();
-}
 
 
-</script>
 <div name="boardimage" >
     <img  src="{% static "board.gif" %}" width="640px" height="640px" style="position: absolute;left:20px;top:20px;" />
 </div>
@@ -280,42 +253,94 @@ $("#newgame").click( function() {
 
 
 function update_board_and_history(data){
+
+    /*
+    <div id="boardtable" style="position:absolute;left:20px;top:20px;" >
+    <table name="boardtable" id="chessboard" border="0"  cellpadding="0" cellspacing="0" >
+        {% for row in board %}
+            <tr>
+            {% for cell in row %}
+                <td >
+
+                    {% if cell.0 == "r"  %}
+                        <img class="cell" name="{{ cell.1 }}"  src="{% static "black_rook.png" %}" width="80px" height="80px"/>
+                    {% elif cell.0 == "n"  %}
+                        <img class="cell" name="{{ cell.1 }}" src="{% static "black_knight.png" %}" width="80px" height="80px"/>
+                    {% elif cell.0 == "b"  %}
+                        <img class="cell" name="{{ cell.1 }}" src="{% static "black_bishop.png" %}" width="80px" height="80px"/>
+                    {% elif cell.0 == "q"  %}
+                        <img class="cell" name="{{ cell.1 }}" src="{% static "black_queen.png" %}" width="80px" height="80px"/>
+                    {% elif cell.0 == "k"  %}
+                        <img class="cell" name="{{ cell.1 }}" src="{% static "black_king.png" %}" width="80px" height="80px"/>
+                    {% elif cell.0 == "p"  %}
+                        <img class="cell" name="{{ cell.1 }}" src="{% static "black_pawn.png" %}" width="80px" height="80px"/>
+                    {% elif cell.0 == "R"  %}
+                        <img class="cell" name="{{ cell.1 }}"  src="{% static "white_rook.png" %}" width="80px" height="80px"/>
+                    {% elif cell.0 == "N"  %}
+                        <img class="cell" name="{{ cell.1 }}" src="{% static "white_knight.png" %}" width="80px" height="80px"/>
+                    {% elif cell.0 == "B"  %}
+                        <img class="cell" name="{{ cell.1 }}" src="{% static "white_bishop.png" %}" width="80px" height="80px"/>
+                    {% elif cell.0 == "Q"  %}
+                        <img class="cell" name="{{ cell.1 }}" src="{% static "white_queen.png" %}" width="80px" height="80px"/>
+                    {% elif cell.0 == "K"  %}
+                        <img class="cell" name="{{ cell.1 }}" src="{% static "white_king.png" %}" width="80px" height="80px"/>
+                    {% elif cell.0 == "P"  %}
+                        <img class="cell" name="{{ cell.1 }}" src="{% static "white_pawn.png" %}" width="80px" height="80px"/>
+                    {% else %}
+                        <img class="cell" name="{{ cell.1 }}"  src="{% static "blank.gif" %}" width="80px" height="80px"/>
+                    {% endif %}
+
+                </td>
+            {% endfor %}
+            </tr>
+        {% endfor %}
+    </table>
+</div>
+
+    */
+
+    $('#chessboard tr').remove();
+
     for(var i=0;i<8;i++)
     {
+        var row = $('#chessboard')[0].insertRow();
         for(var j=0;j<8;j++)
         {
+            var cell = row.insertCell();
+
             var loc = String.fromCharCode('a'.charCodeAt(0)+j) + (8-i);
-            var cell = $('[name="'+loc+'"]');
 //drag dropta sorun cıkıyo boyle 
 // img silinip yeniden yaratılabilir
             if(data.board[i][j]=="r")
-                cell.attr("src","/static/black_rook.png" );
+                cell.innerHTML = '<img class="cell" name="'+loc+'"  src="/static/black_rook.png" width="80px" height="80px"/>'
             else if(data.board[i][j]=="n")
-                cell.attr("src","/static/black_knight.png" );
+                cell.innerHTML = '<img class="cell" name="'+loc+'"  src="/static/black_knight.png" width="80px" height="80px"/>'
             else if(data.board[i][j]=="b")
-                cell.attr("src","/static/black_bishop.png" );
+                cell.innerHTML = '<img class="cell" name="'+loc+'"  src="/static/black_bishop.png" width="80px" height="80px"/>'
             else if(data.board[i][j]=="q")
-                cell.attr("src","/static/black_queen.png" );
+                cell.innerHTML = '<img class="cell" name="'+loc+'"  src="/static/black_queen.png" width="80px" height="80px"/>'
             else if(data.board[i][j]=="k")
-                cell.attr("src","/static/black_king.png" );
+                cell.innerHTML = '<img class="cell" name="'+loc+'"  src="/static/black_king.png" width="80px" height="80px"/>'
             else if(data.board[i][j]=="p")
-                cell.attr("src","/static/black_pawn.png" );
+                cell.innerHTML = '<img class="cell" name="'+loc+'"  src="/static/black_pawn.png" width="80px" height="80px"/>'
             else if(data.board[i][j]=="R")
-                cell.attr("src","/static/white_rook.png" );
+                cell.innerHTML = '<img class="cell" name="'+loc+'"  src="/static/white_rook.png" width="80px" height="80px"/>'
             else if(data.board[i][j]=="N")
-                cell.attr("src","/static/white_knight.png" );
+                cell.innerHTML = '<img class="cell" name="'+loc+'"  src="/static/white_knight.png" width="80px" height="80px"/>'
             else if(data.board[i][j]=="B")
-                cell.attr("src","/static/white_bishop.png" );
+                cell.innerHTML = '<img class="cell" name="'+loc+'"  src="/static/white_bishop.png" width="80px" height="80px"/>'
             else if(data.board[i][j]=="Q")
-                cell.attr("src","/static/white_queen.png" );
+                cell.innerHTML = '<img class="cell" name="'+loc+'"  src="/static/white_queen.png" width="80px" height="80px"/>'
             else if(data.board[i][j]=="K")
-                cell.attr("src","/static/white_king.png" );
+                cell.innerHTML = '<img class="cell" name="'+loc+'"  src="/static/white_king.png" width="80px" height="80px"/>'
             else if(data.board[i][j]=="P")
-                cell.attr("src","/static/white_pawn.png" );
+                cell.innerHTML = '<img class="cell" name="'+loc+'"  src="/static/white_pawn.png" width="80px" height="80px"/>'
             else
-                cell.attr("src","/static/blank.gif" );
+                cell.innerHTML = '<img class="cell" name="'+loc+'"  src="/static/blank.gif" width="80px" height="80px"/>'
+
         }
     }
+    make_draggable();
 
     historytable = $("#historytable tbody")[1];
     historytable.innerHTML = "";
@@ -335,7 +360,15 @@ function control()
     {
         make_get('{"op":"play","params":["nextmove","{{color}}","'+$('[name="moves"]').val()+'"]}' ,function(data){
 
-            if(data.success==false)
+            if(data.isfinished == true)
+            {
+                make_get('{"op":"play","params":["getwinner"]' , function(data){
+
+                    alert("The winner is "+data.winner);
+
+                })
+            }
+            else if(data.success==false)
             {
                 alert('Invalid move');
             }
@@ -350,6 +383,30 @@ function control()
 
     }
 }
+
+function make_draggable() {
+	$( "#chessboard tr td img" ).draggable({containment : "#boardtable"  });
+	$('#chessboard tr td img').droppable( {
+//		activeClass: "ui-state-default",
+//		hoverClass: "ui-drop-hover",
+//		accept: ":not(.ui-sortable-helper)",
+//		over: function (event, ui) {
+//		var $this = $(this);
+//		},
+	    drop: handleDropEvent
+		  } );
+}
+make_draggable();
+
+function handleDropEvent( event, ui ) {
+  var draggable = ui.draggable.attr('name');
+  var droppable = $(this).attr("name");
+	//event.preventDefault();
+	document.getElementsByName('moves')[0].value += draggable;
+	document.getElementsByName('moves')[0].value += droppable;
+	control();
+}
+
 
 
 
